; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_x11_window.c__glfwPlatformCreateWindow.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_x11_window.c__glfwPlatformCreateWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@GL_FALSE = common dso_local global i32 0, align 4
@GL_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_glfwPlatformCreateWindow(i32* %0, %struct.TYPE_4__* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = call i32 @_glfwCreateContext(i32* %10, i32* %11, i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* @GL_FALSE, align 4
  store i32 %16, i32* %5, align 4
  br label %36

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %20 = call i32 @createWindow(i32* %18, %struct.TYPE_4__* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %24, label %22

22:                                               ; preds = %17
  %23 = load i32, i32* @GL_FALSE, align 4
  store i32 %23, i32* %5, align 4
  br label %36

24:                                               ; preds = %17
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @_glfwPlatformShowWindow(i32* %30)
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @enterFullscreenMode(i32* %32)
  br label %34

34:                                               ; preds = %29, %24
  %35 = load i32, i32* @GL_TRUE, align 4
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %34, %22, %15
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @_glfwCreateContext(i32*, i32*, i32*) #1

declare dso_local i32 @createWindow(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @_glfwPlatformShowWindow(i32*) #1

declare dso_local i32 @enterFullscreenMode(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
